--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa-redis-cache",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "a middleware for koa to cache response with redis.",
   "main": "index.js",
   "scripts": {
@@ -26,10 +26,10 @@
   "dependencies": {
     "co-redis": "^1.1.0",
     "path-to-regexp": "^0.1.2",
-    "redis": "^0.10.1"
+    "redis": "^0.11.0"
   },
   "devDependencies": {
-    "koa": "^0.7.0",
+    "koa": "*",
     "mocha": "*",
     "should": "*",
     "supertest": "*"
