use npm script, rm npmignore and makefile; add badges; add travis and cover report; fix test; rename index file

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "koa-redis-cache",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "a middleware for koa to cache response with redis.",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "node_modules/.bin/mocha --harmony -R spec -t 5000 test/*.js",
+    "test-cov": "node --harmony node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -R dot -t 5000 test/*.js",
+    "test-travis": "node --harmony node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- -R dot -t 5000 test/*.js"
   },
   "repository": {
     "type": "git",
@@ -23,12 +25,17 @@
     "url": "https://github.com/coderhaoxin/koa-redis-cache/issues"
   },
   "homepage": "https://github.com/coderhaoxin/koa-redis-cache",
+  "files": [
+    "index.js",
+    "Readme.md"
+  ],
   "dependencies": {
     "co-redis": "^1.1.0",
     "path-to-regexp": "^0.1.2",
     "redis": "^0.11.0"
   },
   "devDependencies": {
+    "istanbul-harmony": "^0.3.0",
     "koa": "*",
     "mocha": "*",
     "should": "*",
