--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "a middleware for koa to cache response with redis.",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha --harmony -R spec -t 5000 test/*.js",
-    "test-cov": "node --harmony node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -R dot -t 5000 test/*.js",
-    "test-travis": "node --harmony node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- -R dot -t 5000 test/*.js"
+    "test": "mocha -R spec -t 5000 test/*.js",
+    "test-cov": "istanbul cover node_modules/.bin/_mocha -- -R dot -t 5000 test/*.js",
+    "test-travis": "istanbul cover node_modules/.bin/_mocha --report lcovonly -- -R dot -t 5000 test/*.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/coderhaoxin/koa-redis-cache.git"
-  },
+  "repository": "coderhaoxin/koa-redis-cache",
   "keywords": [
     "middleware",
     "response",
@@ -21,19 +18,15 @@
   ],
   "author": "haoxin",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/coderhaoxin/koa-redis-cache/issues"
-  },
-  "homepage": "https://github.com/coderhaoxin/koa-redis-cache",
   "files": [
     "index.js",
     "Readme.md"
   ],
   "dependencies": {
-    "co-redis": "^1.1.0",
+    "co-redis": "^1.2.2",
     "path-to-regexp": "1",
     "readall": "0.0.4",
-    "redis": "^0.12.0"
+    "redis": "^2.2.5"
   },
   "devDependencies": {
     "istanbul-harmony": "*",
