--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa-redis-cache",
-  "version": "0.5.0",
+  "version": "1.0.0",
   "description": "a middleware for koa to cache response with redis.",
   "main": "index.js",
   "scripts": {
@@ -23,16 +23,16 @@
     "Readme.md"
   ],
   "dependencies": {
-    "co-redis": "^1.2.2",
+    "co-redis": "2",
     "path-to-regexp": "1",
-    "readall": "0.0.4",
-    "redis": "^2.2.5"
+    "readall": "1",
+    "redis": "2"
   },
   "devDependencies": {
-    "istanbul-harmony": "*",
-    "koa": "*",
-    "mocha": "*",
-    "should": "*",
-    "supertest": "*"
+    "istanbul-harmony": "0",
+    "koa": "1",
+    "mocha": "2",
+    "should": "7",
+    "supertest": "1"
   }
 }
