--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa-redis-cache",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "a middleware for koa to cache response with redis.",
   "main": "index.js",
   "scripts": {
@@ -29,7 +29,7 @@
     "redis": "2"
   },
   "devDependencies": {
-    "istanbul-harmony": "0",
+    "istanbul": "0",
     "koa": "1",
     "mocha": "2",
     "should": "7",
